# python-logger

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Pipfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg  setup.py
.github/: CODEOWNERS
.github/workflows/: pytest.yml
pylogger/: pylogger.py
